--- a/app/src/main/res/layout/activity_binding_phone.xml
+++ b/app/src/main/res/layout/activity_binding_phone.xml
@@ -5,12 +5,12 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <include layout="@layout/login_toolbar" />
+    <include layout="@layout/layout_title" />
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:background="#F5F5F5" />
+        android:layout_height="6.5dp"
+        android:background="@drawable/view_space" />
 
     <!-- 手机号 -->
     <LinearLayout
