--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,12 +10,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <include layout="@layout/login_toolbar" />
+        <include layout="@layout/layout_title" />
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="#F5F5F5"/>
+            android:layout_height="6.5dp"
+            android:background="@drawable/view_space" />
 
         <ImageView
             android:layout_width="wrap_content"
