--- a/app/src/main/res/layout/fragment_headline_list.xml
+++ b/app/src/main/res/layout/fragment_headline_list.xml
@@ -14,45 +14,52 @@
         android:textSize="9sp"
         android:visibility="gone" />
 
-    <RelativeLayout
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:layout_weight="1">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_headline"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
         <RelativeLayout
-            android:id="@+id/rl_empty"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:gravity="center_horizontal"
-            android:visibility="gone">
+            android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/iv"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_headline"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:src="@drawable/img_empty_follow" />
+                android:layout_height="match_parent" />
 
-            <TextView
-                android:id="@+id/tv_empty"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/iv"
-                android:layout_centerHorizontal="true"
-                android:text="当前列表为空"
-                android:textColor="#c5c5c5"
-                android:textSize="12sp"
-                android:visibility="visible" />
+            <RelativeLayout
+                android:id="@+id/rl_empty"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:gravity="center_horizontal"
+                android:visibility="gone">
+
+                <ImageView
+                    android:id="@+id/iv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/img_empty_follow" />
+
+                <TextView
+                    android:id="@+id/tv_empty"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/iv"
+                    android:layout_centerHorizontal="true"
+                    android:text="当前列表为空"
+                    android:textColor="#c5c5c5"
+                    android:textSize="12sp"
+                    android:visibility="visible" />
+            </RelativeLayout>
         </RelativeLayout>
-    </RelativeLayout>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
 
     <RelativeLayout
         android:id="@+id/rl_gift"
@@ -136,9 +143,9 @@
                             android:id="@+id/tv_charm_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="12dp"
-                            android:layout_centerInParent="true"
                             android:layout_alignParentRight="true"
+                            android:layout_centerInParent="true"
+                            android:layout_marginRight="12dp"
                             android:singleLine="true"
                             android:textColor="@color/tran_black2"
                             android:textSize="10sp" />
