--- a/app/src/main/res/layout/dialog_head_line.xml
+++ b/app/src/main/res/layout/dialog_head_line.xml
@@ -9,10 +9,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        android:orientation="vertical"
         android:layout_marginLeft="23dp"
         android:layout_marginRight="23dp"
-        android:background="@drawable/shape_dialog_update_bg">
+        android:background="@drawable/shape_dialog_update_bg"
+        android:orientation="vertical">
 
         <com.whzl.mengbi.ui.widget.tablayout.TabLayout
             android:id="@+id/tab_layout_head"
@@ -27,7 +27,7 @@
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
     </LinearLayout>
 
 </LinearLayout>
