--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,18 +15,13 @@
             android:text="@string/home_title"
             android:textColor="#323232" />
 
-        <RelativeLayout
-            android:id="@+id/rl_search"
-            android:layout_width="50dp"
-            android:layout_height="46dp">
+        <ImageView
+            android:id="@+id/iv_search"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_search_home" />
 
-            <ImageButton
-                android:id="@+id/ib_search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:background="@drawable/ic_search_home" />
-        </RelativeLayout>
     </RelativeLayout>
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
