--- a/app/src/main/res/layout/fragment_red_bag.xml
+++ b/app/src/main/res/layout/fragment_red_bag.xml
@@ -37,7 +37,6 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:gravity="end"
-                android:hint="0"
                 android:inputType="number"
                 android:maxLength="8"
                 android:paddingBottom="12dp"
@@ -82,7 +81,7 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:gravity="end"
-                android:hint="填写个数"
+                android:hint="5～50个"
                 android:inputType="number"
                 android:maxLength="8"
                 android:paddingBottom="12dp"
