--- a/app/src/main/res/layout/item_search_record.xml
+++ b/app/src/main/res/layout/item_search_record.xml
@@ -13,7 +13,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="9dp" />
+            android:layout_marginLeft="12dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -25,19 +25,20 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical">
+                android:layout_height="wrap_content">
 
                 <ImageView
                     android:id="@+id/iv_level"
                     android:layout_width="wrap_content"
-                    android:layout_height="20dp" />
+                    android:layout_height="15dp"
+                    android:layout_gravity="center_vertical" />
 
                 <TextView
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="6dp"
                     android:textColor="#323232"
                     android:textSize="15sp" />
             </LinearLayout>
@@ -62,7 +63,7 @@
             android:text="直播中"
             android:textColor="#ff2b3f"
             android:textSize="14sp"
-            android:visibility="gone"/>
+            android:visibility="gone" />
     </RelativeLayout>
 
     <View
