--- a/app/src/main/res/layout/activity_red_bag.xml
+++ b/app/src/main/res/layout/activity_red_bag.xml
@@ -14,19 +14,15 @@
             android:text="发红包 拿分红"
             android:textColor="#fffef8" />
 
-        <LinearLayout
-            android:layout_width="50dp"
-            android:layout_height="46dp"
+        <ImageButton
+            android:id="@+id/btn_note"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:gravity="center">
-
-            <ImageButton
-                android:id="@+id/btn_note"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:background="@drawable/ic_note_red_bag" />
-        </LinearLayout>
+            android:layout_centerVertical="true"
+            android:background="@null"
+            android:padding="10dp"
+            android:src="@drawable/ic_note_red_bag" />
 
 
         <ImageButton
