--- a/app/src/main/res/layout/activity_red_bag.xml
+++ b/app/src/main/res/layout/activity_red_bag.xml
@@ -39,7 +39,9 @@
         android:id="@+id/tab_layout"
         style="@style/Red_Bag_Tab"
         android:layout_width="match_parent"
-        android:layout_height="44dp">
+        android:layout_height="44dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp">
 
     </android.support.design.widget.TabLayout>
 
