--- a/app/src/main/res/layout/activity_account_switch.xml
+++ b/app/src/main/res/layout/activity_account_switch.xml
@@ -11,5 +11,6 @@
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp" />
+        android:layout_marginTop="2dp"
+        android:overScrollMode="never" />
 </LinearLayout>
