--- a/app/src/main/res/layout/pull_refresh_layout.xml
+++ b/app/src/main/res/layout/pull_refresh_layout.xml
@@ -47,7 +47,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical"
-        android:paddingBottom="50dp">
+        android:paddingBottom="50dp"
+        android:visibility="gone">
 
         <ProgressBar
             android:layout_width="50dp"
