--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -346,8 +346,8 @@
     </style>
 
     <style name="dialogWindowAnim" parent="android:Animation">
-        <item name="android:windowEnterAnimation" >@anim/dialog_show_anim</item>
-        <item name="android:windowExitAnimation" >@anim/dialog_exit_anim</item>
+        <item name="android:windowEnterAnimation">@anim/dialog_show_anim</item>
+        <item name="android:windowExitAnimation">@anim/dialog_exit_anim</item>
     </style>
 
     <style name="UserTabLayout" parent="Widget.Design.TabLayout">
@@ -431,5 +431,19 @@
         <!--<selectedItem name="android:textColor">@android:color/white</selectedItem>-->
         <item name="textAllCaps">true</item>
         <!--<item name="android:textStyle">bold</item>-->
+    </style>
+
+    <style name="ProgressBar_Web" parent="@android:style/Widget.ProgressBar.Horizontal">
+               
+        <item name="android:minHeight">3dip</item>
+               
+        <item name="android:indeterminateOnly">false</item>
+               
+        <item name="android:indeterminateDrawable">
+            @android:drawable/progress_indeterminate_horizontal
+        </item>
+               
+        <item name="android:progressDrawable">@drawable/progress_web</item>
+           
     </style>
 </resources>
