--- a/app/src/main/res/drawable/progress_web.xml
+++ b/app/src/main/res/drawable/progress_web.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item android:id="@android:id/background">
-        <shape>
-            <solid android:color="@color/appBg" />
-        </shape>
-    </item>
-
-    <item android:id="@android:id/progress">
+        <clip>
             <shape>
-                <solid android:color="#75bbfb" />
+                <solid android:color="@color/white"></solid>
             </shape>
+
+        </clip>
+    </item>
+    <item android:id="@android:id/progress">
+        <clip>
+            <shape>
+                <solid android:color="@color/colorPrimary"></solid>
+                <corners android:radius="10dp" />
+            </shape>
+        </clip>
     </item>
 
 </layer-list>
