--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -287,7 +287,7 @@
                         android:background="@drawable/bg_red_bag_live"
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
-                        android:visibility="visible">
+                        android:visibility="gone">
 
                         <ImageView
                             android:layout_width="wrap_content"
