--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -550,53 +550,7 @@
                         android:id="@+id/fragment_container"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="#343a42">
-
-                    </FrameLayout>
-
-                    <!--<ImageButton-->
-                    <!--android:id="@+id/ib_luck_wheel"-->
-                    <!--android:layout_width="60dp"-->
-                    <!--android:layout_height="60dp"-->
-                    <!--android:layout_alignParentRight="true"-->
-                    <!--android:layout_marginRight="7dp"-->
-                    <!--android:layout_marginTop="9dp"-->
-                    <!--android:background="@null" />-->
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginBottom="5dp"
-                        android:layout_marginRight="7dp"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical">
-
-
-                        <android.support.v4.view.ViewPager
-                            android:id="@+id/vp_activity"
-                            android:layout_width="100dp"
-                            android:layout_height="130dp"
-                            android:overScrollMode="never"
-                            android:visibility="visible" />
-
-                        <LinearLayout
-                            android:id="@+id/ll_pager_index"
-                            android:layout_width="100dp"
-                            android:layout_height="5dp"
-                            android:layout_marginTop="5dp"
-                            android:gravity="center"
-                            android:orientation="horizontal" />
-                    </LinearLayout>
-
-                    <com.youth.banner.Banner
-                        android:id="@+id/banner"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="9dp"
-                        android:layout_marginTop="7dp"/>
+                        android:background="#343a42" />
 
                     <View
                         android:layout_width="match_parent"
@@ -604,13 +558,54 @@
                         android:layout_alignParentTop="true"
                         android:background="@drawable/bg_chat_top_translate" />
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/rv_redpack"
-                        android:layout_width="wrap_content"
-                        android:layout_height="37dp"
-                        android:layout_marginTop="12dp"
-                        android:overScrollMode="never" />
 
+                    <RelativeLayout
+                        android:id="@+id/chatActivityContainer"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <com.youth.banner.Banner
+                            android:id="@+id/banner"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginRight="9dp"
+                            android:layout_marginTop="7dp" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginBottom="5dp"
+                            android:layout_marginRight="7dp"
+                            android:gravity="center_horizontal"
+                            android:orientation="vertical">
+
+
+                            <android.support.v4.view.ViewPager
+                                android:id="@+id/vp_activity"
+                                android:layout_width="100dp"
+                                android:layout_height="130dp"
+                                android:overScrollMode="never"
+                                android:visibility="visible" />
+
+                            <LinearLayout
+                                android:id="@+id/ll_pager_index"
+                                android:layout_width="100dp"
+                                android:layout_height="5dp"
+                                android:layout_marginTop="5dp"
+                                android:gravity="center"
+                                android:orientation="horizontal" />
+                        </LinearLayout>
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/rv_redpack"
+                            android:layout_width="wrap_content"
+                            android:layout_height="37dp"
+                            android:layout_marginTop="12dp"
+                            android:overScrollMode="never" />
+                    </RelativeLayout>
                 </RelativeLayout>
             </LinearLayout>
 
