--- a/app/src/main/res/layout/fragment_week_star_lists.xml
+++ b/app/src/main/res/layout/fragment_week_star_lists.xml
@@ -4,121 +4,128 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ScrollView
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_week_gift"
-                    android:layout_width="match_parent"
-                    android:layout_height="65dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp" />
-            </RelativeLayout>
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="5dp"
-                android:src="@drawable/ic_week_anchor" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="300dp">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_anchor"
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:focusableInTouchMode="false"
-                    android:nestedScrollingEnabled="false" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
                 <RelativeLayout
-                    android:id="@+id/rl_empty_anchor"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:visibility="gone">
+                    android:layout_marginTop="10dp">
 
-                    <ImageView
-                        android:id="@+id/iv_empty_anchor"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/img_empty_follow" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/iv_empty_anchor"
-                        android:layout_centerHorizontal="true"
-                        android:text="当前列表为空"
-                        android:textColor="@color/tran_black5"
-                        android:textSize="10sp" />
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/rv_week_gift"
+                        android:layout_width="match_parent"
+                        android:layout_height="65dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp" />
                 </RelativeLayout>
 
-            </RelativeLayout>
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="5dp"
-                android:src="@drawable/ic_week_rich" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="300dp">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_user"
+                <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:focusableInTouchMode="false"
-                    android:nestedScrollingEnabled="false" />
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/ic_week_anchor" />
 
                 <RelativeLayout
-                    android:id="@+id/rl_empty_user"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:visibility="gone">
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp">
 
-                    <ImageView
-                        android:id="@+id/iv_empty_user"
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/rv_anchor"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:focusableInTouchMode="false"
+                        android:nestedScrollingEnabled="false" />
+
+                    <RelativeLayout
+                        android:id="@+id/rl_empty_anchor"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/img_empty_follow" />
+                        android:layout_centerInParent="true"
+                        android:visibility="gone">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/iv_empty_user"
-                        android:layout_centerHorizontal="true"
-                        android:text="当前列表为空"
-                        android:textColor="@color/tran_black5"
-                        android:textSize="10sp" />
+                        <ImageView
+                            android:id="@+id/iv_empty_anchor"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/img_empty_follow" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/iv_empty_anchor"
+                            android:layout_centerHorizontal="true"
+                            android:text="当前列表为空"
+                            android:textColor="@color/tran_black5"
+                            android:textSize="10sp" />
+                    </RelativeLayout>
+
                 </RelativeLayout>
 
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/ic_week_rich" />
 
-            </RelativeLayout>
-        </LinearLayout>
-    </ScrollView>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/rv_user"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:focusableInTouchMode="false"
+                        android:nestedScrollingEnabled="false" />
+
+                    <RelativeLayout
+                        android:id="@+id/rl_empty_user"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:visibility="gone">
+
+                        <ImageView
+                            android:id="@+id/iv_empty_user"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/img_empty_follow" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/iv_empty_user"
+                            android:layout_centerHorizontal="true"
+                            android:text="当前列表为空"
+                            android:textColor="@color/tran_black5"
+                            android:textSize="10sp" />
+                    </RelativeLayout>
+
+
+                </RelativeLayout>
+            </LinearLayout>
+        </ScrollView>
+
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
     <RelativeLayout
         android:id="@+id/rl_gift"
