--- a/app/src/main/res/layout/fragment_week_star_lists.xml
+++ b/app/src/main/res/layout/fragment_week_star_lists.xml
@@ -10,6 +10,10 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
+        <com.whzl.mengbi.ui.widget.recyclerview.PullRefreshHeader
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
