--- a/app/src/main/res/layout/fragment_headline_list.xml
+++ b/app/src/main/res/layout/fragment_headline_list.xml
@@ -22,6 +22,10 @@
         android:layout_marginBottom="5dp"
         android:layout_weight="1">
 
+        <com.whzl.mengbi.ui.widget.recyclerview.PullRefreshHeader
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
