--- a/app/src/main/res/layout/pull_refresh_layout.xml
+++ b/app/src/main/res/layout/pull_refresh_layout.xml
@@ -8,6 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <com.whzl.mengbi.ui.widget.recyclerview.PullRefreshHeader
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
         <FrameLayout
             android:layout_width="match_parent"
