--- a/app/src/main/res/layout/dialog_private_chat.xml
+++ b/app/src/main/res/layout/dialog_private_chat.xml
@@ -17,15 +17,37 @@
         android:orientation="vertical">
 
 
-        <TextView
-            android:id="@+id/tv_title"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:paddingBottom="8dp"
-            android:paddingTop="7.5dp"
-            android:textColor="@color/text_color_private_chat"
-            android:textSize="12sp" />
+            android:paddingTop="7.5dp">
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@color/text_color_private_chat"
+                android:textSize="12sp" />
+
+            <FrameLayout
+                android:id="@+id/ib_close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5.5dp"
+                android:paddingBottom="2dp"
+                android:paddingRight="10dp"
+                android:paddingTop="2dp">
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_login_back"
+                    android:scaleType="center"
+                    android:src="@null" />
+            </FrameLayout>
+        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
@@ -43,12 +65,13 @@
             android:id="@+id/ll_bottom_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="36dp"
+                android:layout_height="33dp"
                 android:layout_marginLeft="11dp"
                 android:layout_marginRight="9dp"
                 android:layout_weight="1"
@@ -58,7 +81,7 @@
                 <TextView
                     android:id="@+id/tv_content"
                     android:layout_width="match_parent"
-                    android:layout_height="36dp"
+                    android:layout_height="33dp"
                     android:layout_centerVertical="true"
                     android:layout_weight="1"
                     android:background="@null"
