--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,26 +24,33 @@
         android:layout_weight="0"
         android:background="@color/white"
         android:orientation="horizontal"
-        android:paddingBottom="4dp">
+        android:paddingBottom="4dp"
+        android:paddingTop="8dp">
 
         <RadioButton
             android:id="@+id/rb_home"
             style="@style/main_tab"
             android:checked="true"
             android:drawableTop="@drawable/selector_main_tab_home_icon"
-            android:text="@string/home_title" />
-
-        <RadioButton
-            android:id="@+id/rb_rank"
-            style="@style/main_tab"
-            android:drawableTop="@drawable/selector_main_tab_rank_icon"
-            android:text="@string/rank_title" />
+            android:text="@string/live_title" />
 
         <RadioButton
             android:id="@+id/rb_follow"
             style="@style/main_tab"
             android:drawableTop="@drawable/selector_main_tab_follow_icon"
             android:text="@string/follow_title" />
+
+        <RadioButton
+            android:id="@+id/rb_message"
+            style="@style/main_tab"
+            android:drawableTop="@drawable/selector_main_tab_message_icon"
+            android:text="@string/message_title" />
+
+        <RadioButton
+            android:id="@+id/rb_rank"
+            style="@style/main_tab"
+            android:drawableTop="@drawable/selector_main_tab_rank_icon"
+            android:text="@string/find_title" />
 
         <RadioButton
             android:id="@+id/rb_me"
