--- a/app/src/main/res/layout/item_priavet_chat_left.xml
+++ b/app/src/main/res/layout/item_priavet_chat_left.xml
@@ -13,8 +13,10 @@
         android:id="@+id/tv_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="7dp"
         android:layout_toRightOf="@id/iv_avatar"
         android:background="@drawable/bg_private_chat_left"
+        android:gravity="top"
         android:padding="8dp"
         android:textColor="@color/text_color_private_chat"
         android:textSize="12sp" />
