--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -445,4 +445,15 @@
         <item name="android:progressDrawable">@drawable/progress_web</item>
            
     </style>
+
+    <style name="mine_option_item">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:paddingRight">12dp</item>
+        <item name="android:drawableRight">@drawable/ic_mine_item_arrow</item>
+        <item name="android:background">#ffffff</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/tran_black2</item>
+    </style>
 </resources>
