--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -73,6 +73,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/tran_black2"
+                            android:singleLine="true"
+                            android:maxLength="15"
                             android:textSize="15sp"
                             android:textStyle="bold" />
 
@@ -81,8 +83,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="10dp"
-                            android:src="@drawable/ic_mine_man" />
+                            android:layout_marginLeft="10dp" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -105,7 +106,6 @@
                             android:id="@+id/tv_user_id"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="萌号"
                             android:textColor="@color/tran_black5"
                             android:textSize="12sp" />
                     </LinearLayout>
@@ -243,7 +243,7 @@
                             android:layout_height="wrap_content"
                             android:text="萌币"
                             android:textColor="@color/tran_black2"
-                            android:textSize="10sp" />
+                            android:textSize="11sp" />
 
                         <View
                             android:layout_width="3dp"
@@ -251,7 +251,7 @@
                             android:layout_gravity="center_vertical"
                             android:layout_marginLeft="5dp"
                             android:layout_marginRight="5dp"
-                            android:background="@color/tran_black2" />
+                            android:background="@drawable/shape_circle" />
 
                         <TextView
                             android:id="@+id/tv_mengdou"
@@ -259,7 +259,7 @@
                             android:layout_height="wrap_content"
                             android:text="萌豆"
                             android:textColor="@color/tran_black2"
-                            android:textSize="10sp" />
+                            android:textSize="11sp" />
                     </LinearLayout>
 
                     <ImageView
