--- a/app/src/main/res/layout/item_recharge_rule.xml
+++ b/app/src/main/res/layout/item_recharge_rule.xml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="4dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/rule_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
+        android:background="@drawable/selector_pay_rule_bg"
         android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintDimensionRatio="H,2:1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintDimensionRatio="H,2.5:1"
-        android:background="@drawable/selector_pay_rule_bg">
+        app:layout_constraintRight_toRightOf="parent">
 
         <TextView
             android:id="@+id/tv_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="13sp"
-            android:textColor="@drawable/selector_recharge_mengbi_text_color"/>
+            android:textColor="#000000"
+            android:textSize="13sp" />
 
         <TextView
             android:id="@+id/tv_cost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
-            android:textSize="13sp"
-            android:textColor="@drawable/selector_recharge_cost_text_color"/>
+            android:textColor="#70000000"
+            android:textSize="10sp" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
