--- a/app/src/main/res/layout/item_use_rebate.xml
+++ b/app/src/main/res/layout/item_use_rebate.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#5fc8ff"
     android:orientation="vertical">
-    <include layout="@layout/white_toolbar"/>
-    <FrameLayout
-        android:id="@+id/fl_contain"
+
+    <TextView
+        android:id="@+id/tv_name"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content" />
 </LinearLayout>
