--- a/app/src/main/res/layout/activity_my_wallet.xml
+++ b/app/src/main/res/layout/activity_my_wallet.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f6f6f6"
     android:orientation="vertical">
 
     <include layout="@layout/layout_title" />
@@ -10,5 +11,153 @@
         android:layout_width="match_parent"
         android:layout_height="6.5dp"
         android:background="@drawable/view_space" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="11dp"
+        android:layout_marginTop="15dp"
+        android:text="@string/my_assets"
+        android:textColor="@color/tran_black2"
+        android:textSize="15sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:background="@drawable/shape_radius_five"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="5dp">
+
+            <ImageView
+                android:id="@+id/iv_mengbi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_wallet_mengbi"
+                android:layout_marginLeft="17dp"
+                android:layout_centerVertical="true"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="萌币"
+                android:textSize="15sp"
+                android:textColor="@color/tran_black2"
+                android:layout_toRightOf="@id/iv_mengbi"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="15dp"/>
+
+            <ImageView
+                android:id="@+id/iv_arrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_mine_item_arrow"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"/>
+
+            <TextView
+                android:id="@+id/tv_mengbi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/tran_black2"
+                android:textSize="13sp"
+                android:layout_marginRight="6dp"
+                android:layout_toLeftOf="@id/iv_arrow"
+                android:layout_centerVertical="true"
+                android:singleLine="true"/>
+        </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="10dp"
+            android:background="@color/tran_black6" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="5dp">
+
+            <ImageView
+                android:id="@+id/iv_mengdou"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_wallet_mengdou"
+                android:layout_marginLeft="17dp"
+                android:layout_centerVertical="true"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="萌豆"
+                android:textSize="15sp"
+                android:textColor="@color/tran_black2"
+                android:layout_toRightOf="@id/iv_mengdou"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="15dp"/>
+
+            <TextView
+                android:id="@+id/tv_mengdou"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/tran_black2"
+                android:textSize="13sp"
+                android:layout_marginRight="23dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:singleLine="true"/>
+        </RelativeLayout>
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="11dp"
+        android:layout_marginTop="15dp"
+        android:text="@string/my_income"
+        android:textColor="@color/tran_black2"
+        android:textSize="15sp" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/shape_radius_five"
+        android:layout_margin="12dp">
+
+        <ImageView
+            android:id="@+id/iv_mengdian"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_wallet_mengdian"
+            android:layout_marginLeft="17dp"
+            android:layout_centerVertical="true"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="萌点"
+            android:textSize="15sp"
+            android:textColor="@color/tran_black2"
+            android:layout_toRightOf="@id/iv_mengdian"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="13dp"/>
+
+        <TextView
+            android:id="@+id/tv_mengdian"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/tran_black2"
+            android:textSize="13sp"
+            android:layout_marginRight="23dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:singleLine="true"/>
+    </RelativeLayout>
 
 </LinearLayout>
