--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -444,4 +444,13 @@
         <item name="android:textSize">13sp</item>
         <item name="android:textColor">@color/tran_black2</item>
     </style>
+
+    <style name="MyLevelTab" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorHeight">2dp</item>
+        <item name="tabIndicatorColor">@color/white</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="tabSelectedTextColor">@color/white</item>
+    </style>
 </resources>
